[gd_scene load_steps=10 format=3 uid="uid://dc3gbibcitcbg"]

[ext_resource type="Script" path="res://enemy/boom_bot.gd" id="1_npnpx"]
[ext_resource type="PackedScene" uid="uid://c5qbwvl224ckh" path="res://ui/health_bar.tscn" id="2_bi62y"]
[ext_resource type="Texture2D" uid="uid://cmgfn1y51c0dq" path="res://asset/blitz.png" id="3_8cn0t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2yiwj"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_p2ne2"]
radius = 117.0

[sub_resource type="CircleShape2D" id="CircleShape2D_v7tk5"]
radius = 220.009

[sub_resource type="AtlasTexture" id="AtlasTexture_ts7ts"]
atlas = ExtResource("3_8cn0t")
region = Rect2(0, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcpou"]
atlas = ExtResource("3_8cn0t")
region = Rect2(52, 0, 52, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_d07af"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts7ts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcpou")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="BoomBot" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_npnpx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2yiwj")

[node name="DetectionBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionBox"]
shape = SubResource("CircleShape2D_p2ne2")
debug_color = Color(0.403922, 0.501961, 0.905882, 0.419608)

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_v7tk5")
debug_color = Color(0.937255, 0.168627, 0.47451, 0.419608)

[node name="NavUpdateTimer" type="Timer" parent="."]
wait_time = 0.663
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0.678431, 0.909804, 0.129412, 1)

[node name="HealthBar" parent="." instance=ExtResource("2_bi62y")]

[node name="ExplodeTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="BoomBotAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_d07af")
frame_progress = 0.954377

[connection signal="body_entered" from="DetectionBox" to="." method="_on_detection_box_body_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="timeout" from="NavUpdateTimer" to="." method="_on_nav_update_timer_timeout"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_explode_timer_timeout"]
